@@ -22,9 +22,18 @@
 #include <boost/foreach.hpp>
 #include <boost/test/unit_test.hpp>
 
+#include <boost/random/mersenne_twister.hpp>
+#include <boost/random/uniform_int_distribution.hpp>
+#include <boost/random/uniform_real_distribution.hpp>
+#include <boost/progress.hpp>
+
+#include <boost/math/special_functions/gamma.hpp>
+#include <boost/math/special_functions/digamma.hpp>
+#include <boost/math/special_functions/bessel.hpp>
+
 using namespace schnek;
 
-std::string parser_input =
+std::string parser_input_basic =
 "// general test of variables assignment and evaluation\n"
 "float var = 2/1.9;\n"
 "string hello = \"Hello\";\n"
@@ -74,6 +83,36 @@ std::string parser_input =
 "// initialising without using independent variables\n"
 "dz = 1.0;\n";
 
+std::string parser_input_utility =
+    "test1 = min(x,y);\n"
+    "test2 = max(x,y);\n"
+    "test_int1 = minI(xi,yi);\n"
+    "test_int2 = maxI(xi,yi);\n";
+
+std::string parser_input_cmath =
+    "test1 = sin(x);\n"
+    "test2 = cos(x);\n"
+    "test3 = exp(-x*x);\n"
+    "test4 = log(1+x*x);\n"
+    "test5 = sqrt(1+x*x);\n";
+
+std::string parser_input_special_functions_gamma =
+    "test1 = gamma(x);\n"
+    "test2 = lgamma(x);\n"
+    "test3 = digamma(x);\n";
+
+std::string parser_input_special_functions_bessel =
+    "test1 = besselj(1,x);\n"
+    "test2 = besselj(2,x);\n"
+    "test3 = bessely(1,x);\n"
+    "test4 = bessely(2,x);\n";
+
+std::string parser_input_special_functions_normal =
+    "test1 = normal(x,y,1.0);\n"
+    "test2 = normal(x,y,-1.0);\n"
+    "test3 = normal(x,y,2.0);\n"
+    "test4 = normal(x,y,-2.0);\n";
+
 int NSteps;
 
 double dx;
@@ -83,13 +122,42 @@ double dz;
 double x;
 double y;
 
+int xi;
+int yi;
+
+double test1;
+double test2;
+double test3;
+double test4;
+double test5;
+
+int test_int1;
+int test_int2;
+int test_int3;
+int test_int4;
+int test_int5;
+
 std::string output;
 
 pParameter xVar;
 pParameter yVar;
+pParameter xiVar;
+pParameter yiVar;
 pParameter dxVar;
 pParameter dyVar;
 pParameter dzVar;
+
+pParameter test1Var;
+pParameter test2Var;
+pParameter test3Var;
+pParameter test4Var;
+pParameter test5Var;
+
+pParameter test_int1Var;
+pParameter test_int2Var;
+pParameter test_int3Var;
+pParameter test_int4Var;
+pParameter test_int5Var;
 
 struct ParserTest
 {
@@ -106,6 +174,21 @@ struct ParserTest
         xVar = blockPars.addParameter("x", &x, BlockParameters::readonly);
         yVar = blockPars.addParameter("y", &y, BlockParameters::readonly);
 
+        xiVar = blockPars.addParameter("xi", &xi, BlockParameters::readonly);
+        yiVar = blockPars.addParameter("yi", &yi, BlockParameters::readonly);
+
+        test1Var = blockPars.addParameter("test1", &test1, 0.0);
+        test2Var = blockPars.addParameter("test2", &test2, 0.0);
+        test3Var = blockPars.addParameter("test3", &test3, 0.0);
+        test4Var = blockPars.addParameter("test4", &test4, 0.0);
+        test5Var = blockPars.addParameter("test5", &test5, 0.0);
+
+        test_int1Var = blockPars.addParameter("test_int1", &test_int1, 0);
+        test_int2Var = blockPars.addParameter("test_int2", &test_int2, 0);
+        test_int3Var = blockPars.addParameter("test_int3", &test_int3, 0);
+        test_int4Var = blockPars.addParameter("test_int4", &test_int4, 0);
+        test_int5Var = blockPars.addParameter("test_int5", &test_int5, 0);
+
         dxVar = blockPars.addParameter("dx", &dx);
         dyVar = blockPars.addParameter("dy", &dy);
         dzVar = blockPars.addParameter("dz", &dz);
@@ -115,8 +198,16 @@ struct ParserTest
       }
   };
 
-  ParserTest() : vars("test_parser", "app") {
-    registerCMath(freg);
+  virtual void registerFunctions()
+  {
+
+  }
+
+  ParserTest() : vars("test_parser", "app") {}
+
+  void init(std::string parser_input)
+  {
+    this->registerFunctions();
 
     blocks.registerBlock("app");
     blocks("app").setClass<SimulationBlock>();
@@ -135,10 +226,30 @@ struct ParserTest
     {
       application = P.parse(in);
     }
-    catch (ParserError &e)
+
+    catch (schnek::ParserError &e)
     {
-      std::cerr << "Parse error, " << e.atomToken.getFilename() << "(" << e.atomToken.getLine() << "): "<< e.message << "\n";
-      throw -1;
+      BOOST_FAIL("Parse error in " + e.getFilename() + " at line " + boost::lexical_cast<std::string>(e.getLine()) + ": " + e.message);
+    }
+    catch (schnek::VariableNotInitialisedException &e)
+    {
+      BOOST_FAIL("Variable was not initialised: " + e.getVarName());
+    }
+    catch (schnek::EvaluationException &e)
+    {
+      BOOST_FAIL("Error in evaluation: " + e.getMessage());
+    }
+    catch (schnek::VariableNotFoundException &e)
+    {
+      BOOST_FAIL("Variable was not found: " + e.getMessage());
+    }
+    catch (SchnekException &e)
+    {
+      BOOST_FAIL("An error occured");
+    }
+    catch (std::string &err)
+    {
+      BOOST_FAIL("FATAL ERROR: " + err);
     }
   }
 
@@ -150,74 +261,288 @@ struct ParserTest
     BOOST_CHECK_EQUAL(NSteps, 7*7*7);
     BOOST_CHECK_EQUAL(dz, 1.0);
   }
-
-  void checkDependency(VariableStorage &vars) {
-    pDependencyMap depMap(new DependencyMap(vars.getRootBlock()));
-    DependencyUpdater updater(depMap);
-
-    updater.addIndependent(xVar);
-    updater.addIndependent(yVar);
-    updater.addDependent(dxVar);
-    updater.addDependent(dyVar);
-
-    for (x=1.0; x<=2.0; x+= 0.01)
-      for (y=1.0; y<=2.0; y+= 0.01)
-      {
-        double x_save = x;
-        double y_save = y;
-        updater.update();
-        BOOST_CHECK_CLOSE(x_save, x, 1e-10);
-        BOOST_CHECK_CLOSE(y_save, y, 1e-10);
-
-        BOOST_CHECK_CLOSE(dx, (y+x) * x * (y+x) / (y+1), 1e-10);
-        BOOST_CHECK_CLOSE(dy, x * (y+x), 1e-10);
-      }
-  }
-
-  void checkIndependency(VariableStorage &vars) {
-    pDependencyMap depMap(new DependencyMap(vars.getRootBlock()));
-    DependencyUpdater updater(depMap);
-
-    updater.addIndependent(xVar);
-    updater.addIndependent(yVar);
-    updater.addDependent(dzVar);
-
-    double dx_save = dx;
-    double dy_save = dy;
-
-    for (x=0.0; x<=1.0; x+= 0.125)
-      for (y=0.0; y<=1.0; y+= 0.125)
-      {
-        double x_save = x;
-        double y_save = y;
-        updater.update();
-        BOOST_CHECK_CLOSE(x_save, x, 1e-10);
-        BOOST_CHECK_CLOSE(y_save, y, 1e-10);
-        BOOST_CHECK_CLOSE(dx_save, dx, 1e-10);
-        BOOST_CHECK_CLOSE(dy_save, dy, 1e-10);
-
-        BOOST_CHECK_CLOSE(dz, 1.0, 1e-10);
-      }
-  }
 };
 
 BOOST_AUTO_TEST_SUITE( parser )
 
 BOOST_FIXTURE_TEST_CASE( parser_values, ParserTest )
 {
+  registerCMath(freg);
+  init(parser_input_basic);
+
   checkParsedVars(1.0);
   checkParsedVars(2.0);
 }
 
-BOOST_FIXTURE_TEST_CASE( parser_dependency, ParserTest )
+BOOST_FIXTURE_TEST_CASE( parser_dependency, ParserTest)
 {
-  checkDependency(vars);
+  registerCMath(freg);
+  init(parser_input_basic);
+
+  pDependencyMap depMap(new DependencyMap(vars.getRootBlock()));
+  DependencyUpdater updater(depMap);
+
+  updater.addIndependent(xVar);
+  updater.addIndependent(yVar);
+  updater.addDependent(dxVar);
+  updater.addDependent(dyVar);
+
+  for (x=1.0; x<=2.0; x+= 0.01)
+    for (y=1.0; y<=2.0; y+= 0.01)
+    {
+      double x_save = x;
+      double y_save = y;
+      updater.update();
+      BOOST_CHECK_CLOSE(x_save, x, 1e-10);
+      BOOST_CHECK_CLOSE(y_save, y, 1e-10);
+
+      BOOST_CHECK_CLOSE(dx, (y+x) * x * (y+x) / (y+1), 1e-10);
+      BOOST_CHECK_CLOSE(dy, x * (y+x), 1e-10);
+    }
 }
 
 BOOST_FIXTURE_TEST_CASE( parser_independency, ParserTest )
 {
-  checkIndependency(vars);
+  registerCMath(freg);
+  init(parser_input_basic);
+
+  pDependencyMap depMap(new DependencyMap(vars.getRootBlock()));
+  DependencyUpdater updater(depMap);
+
+  updater.addIndependent(xVar);
+  updater.addIndependent(yVar);
+  updater.addDependent(dzVar);
+
+  double dx_save = dx;
+  double dy_save = dy;
+
+  for (x=0.0; x<=1.0; x+= 0.125)
+    for (y=0.0; y<=1.0; y+= 0.125)
+    {
+      double x_save = x;
+      double y_save = y;
+      updater.update();
+      BOOST_CHECK_CLOSE(x_save, x, 1e-10);
+      BOOST_CHECK_CLOSE(y_save, y, 1e-10);
+      BOOST_CHECK_CLOSE(dx_save, dx, 1e-10);
+      BOOST_CHECK_CLOSE(dy_save, dy, 1e-10);
+
+      BOOST_CHECK_CLOSE(dz, 1.0, 1e-10);
+    }
+}
+
+BOOST_FIXTURE_TEST_CASE( parser_utility, ParserTest )
+{
+  registerUtilityFunctions(freg);
+  init(parser_input_utility);
+
+  const int N = 100000;
+  boost::progress_display show_progress(2*N);
+
+  {
+    boost::random::mt19937 rGen;
+    boost::random::uniform_real_distribution<> dist(-1e6, 1e6);
+
+    pDependencyMap depMap(new DependencyMap(vars.getRootBlock()));
+    DependencyUpdater updater(depMap);
+
+    updater.addIndependent(xVar);
+    updater.addIndependent(yVar);
+    updater.addDependent(test1Var);
+    updater.addDependent(test2Var);
+
+
+    for (int i=0; i<N; ++i)
+    {
+      x = dist(rGen);
+      y = dist(rGen);
+      updater.update();
+      BOOST_CHECK_EQUAL(test1, std::min(x,y));
+      BOOST_CHECK_EQUAL(test2, std::max(x,y));
+
+      ++show_progress;
+    }
+  }
+  {
+    boost::random::mt19937 rGen;
+    boost::random::uniform_int_distribution<> dist(100000, 100000);
+
+    pDependencyMap depMap(new DependencyMap(vars.getRootBlock()));
+    DependencyUpdater updater(depMap);
+
+    updater.addIndependent(xiVar);
+    updater.addIndependent(yiVar);
+    updater.addDependent(test_int1Var);
+    updater.addDependent(test_int2Var);
+
+
+    for (int i=0; i<N; ++i)
+    {
+      xi = dist(rGen);
+      yi = dist(rGen);
+      updater.update();
+      BOOST_CHECK_EQUAL(test_int1, std::min(xi,yi));
+      BOOST_CHECK_EQUAL(test_int2, std::max(xi,yi));
+
+      ++show_progress;
+    }
+  }
 }
 
 
+BOOST_FIXTURE_TEST_CASE( parser_cmath, ParserTest )
+{
+  registerCMath(freg);
+  init(parser_input_cmath);
+
+  const int N = 100000;
+  boost::progress_display show_progress(N);
+
+  boost::random::mt19937 rGen;
+  boost::random::uniform_real_distribution<> dist(-10, 10);
+
+  pDependencyMap depMap(new DependencyMap(vars.getRootBlock()));
+  DependencyUpdater updater(depMap);
+
+  updater.addIndependent(xVar);
+  updater.addIndependent(yVar);
+  updater.addDependent(test1Var);
+  updater.addDependent(test2Var);
+  updater.addDependent(test3Var);
+  updater.addDependent(test4Var);
+  updater.addDependent(test5Var);
+
+
+  for (int i=0; i<N; ++i)
+  {
+    x = dist(rGen);
+    y = dist(rGen);
+    updater.update();
+    BOOST_CHECK_CLOSE(test1, sin(x), 1e-8);
+    BOOST_CHECK_CLOSE(test2, cos(x), 1e-8);
+    BOOST_CHECK_CLOSE(test3, exp(-x*x), 1e-8);
+    BOOST_CHECK_CLOSE(test4, log(1+x*x), 1e-8);
+    BOOST_CHECK_CLOSE(test5, sqrt(1+x*x), 1e-8);
+
+    ++show_progress;
+  }
+}
+
+BOOST_FIXTURE_TEST_CASE( parser_special_functions_gamma, ParserTest )
+{
+  x=1.0;
+  y=1.0;
+  registerSpecialFunctions(freg);
+  init(parser_input_special_functions_gamma);
+
+  const int N = 100000;
+  boost::progress_display show_progress(N);
+
+  boost::random::mt19937 rGen;
+  boost::random::uniform_real_distribution<> dist(1.0, 10.0);
+
+  pDependencyMap depMap(new DependencyMap(vars.getRootBlock()));
+  DependencyUpdater updater(depMap);
+
+  updater.addIndependent(xVar);
+  updater.addIndependent(yVar);
+  updater.addDependent(test1Var);
+  updater.addDependent(test2Var);
+  updater.addDependent(test3Var);
+
+  for (int i=0; i<N; ++i)
+  {
+    x = dist(rGen);
+    y = dist(rGen);
+
+    updater.update();
+    BOOST_CHECK_CLOSE(test1, boost::math::tgamma(x), 1e-8);
+    BOOST_CHECK_CLOSE(test2, boost::math::lgamma(x), 1e-8);
+    BOOST_CHECK_CLOSE(test3, boost::math::digamma(x), 1e-8);
+
+    ++show_progress;
+  }
+}
+
+BOOST_FIXTURE_TEST_CASE( parser_special_functions_bessel, ParserTest )
+{
+  x=1.0;
+  y=1.0;
+  registerSpecialFunctions(freg);
+  init(parser_input_special_functions_bessel);
+
+  const int N = 100000;
+  boost::progress_display show_progress(N);
+
+  boost::random::mt19937 rGen;
+  boost::random::uniform_real_distribution<> dist(1.0, 10.0);
+
+  pDependencyMap depMap(new DependencyMap(vars.getRootBlock()));
+  DependencyUpdater updater(depMap);
+
+  updater.addIndependent(xVar);
+  updater.addIndependent(yVar);
+  updater.addDependent(test1Var);
+  updater.addDependent(test2Var);
+  updater.addDependent(test3Var);
+  updater.addDependent(test4Var);
+
+  for (int i=0; i<N; ++i)
+  {
+    x = dist(rGen);
+    y = dist(rGen);
+
+    updater.update();
+    BOOST_CHECK_CLOSE(test1, boost::math::cyl_bessel_j(1,x), 1e-8);
+    BOOST_CHECK_CLOSE(test2, boost::math::cyl_bessel_j(2,x), 1e-8);
+    BOOST_CHECK_CLOSE(test3, boost::math::cyl_neumann(1,x), 1e-8);
+    BOOST_CHECK_CLOSE(test4, boost::math::cyl_neumann(2,x), 1e-8);
+
+    ++show_progress;
+  }
+}
+
+double normal(double x, double sigma, double m)
+{
+  double y = (x-m)/sigma;
+  return exp(-y*y/2.0);
+}
+
+BOOST_FIXTURE_TEST_CASE( parser_special_functions_normal, ParserTest )
+{
+  x=1.0;
+  y=1.0;
+  registerSpecialFunctions(freg);
+  init(parser_input_special_functions_normal);
+
+  const int N = 100000;
+  boost::progress_display show_progress(N);
+
+  boost::random::mt19937 rGen;
+  boost::random::uniform_real_distribution<> dist(1.0, 10.0);
+
+  pDependencyMap depMap(new DependencyMap(vars.getRootBlock()));
+  DependencyUpdater updater(depMap);
+
+  updater.addIndependent(xVar);
+  updater.addIndependent(yVar);
+  updater.addDependent(test1Var);
+  updater.addDependent(test2Var);
+  updater.addDependent(test3Var);
+  updater.addDependent(test4Var);
+
+  for (int i=0; i<N; ++i)
+  {
+    x = dist(rGen);
+    y = dist(rGen);
+
+    updater.update();
+    BOOST_CHECK_CLOSE(test1, normal(x,y,1.0), 1e-8);
+    BOOST_CHECK_CLOSE(test2, normal(x,y,-1.0), 1e-8);
+    BOOST_CHECK_CLOSE(test3, normal(x,y,2.0), 1e-8);
+    BOOST_CHECK_CLOSE(test4, normal(x,y,-2.0), 1e-8);
+
+    ++show_progress;
+  }
+}
 BOOST_AUTO_TEST_SUITE_END()
